--- a/src/Components/CharacterContainer/CharacterContainer.scss
+++ b/src/Components/CharacterContainer/CharacterContainer.scss
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 850px;
+  height: 100vh;
 }
 
 .opening-crawl {
